--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
  <p> this is a new repo </p>
- <p> this is a new feature1 modification</p>
+ <p> this is a new feature1 modification(dropout)</p>
  <p> this is second newfeature modification</p>
  <p> thrid time</p>
